fix(css): fix search title whitespace around highlighted word, and highlight of button
Also change MathJax script loading to defer as the official docs suggested

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -266,7 +266,11 @@ ul.search-results li:hover {
 }
 
 .search-results .search-res-title {
-    @apply text-gray-800 flex flex-row items-center font-semibold;
+    @apply block text-gray-800 font-semibold;
+}
+
+.search-results .search-res-title mark {
+    @apply px-1;
 }
 
 .search-results .search-res-date {
